--- a/src/components/ListaDeNotas/estilo.css
+++ b/src/components/ListaDeNotas/estilo.css
@@ -1,12 +1,14 @@
 .lista-notas {
-  display: flex;
-  flex-grow: 1;
-  margin: 1em;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  list-style-type: none;
+  flex-grow: 3;
+  padding: 1em;
 }
 
 .lista-notas_item {
-  padding: 1em;
+  margin: 1em;
   max-width: 240px;
   max-height: 240px;
+  display: inline;
 }
